--- a/first/my-r3f-app/package.json
+++ b/first/my-r3f-app/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^9.121.4",
-    "@react-three/fiber": "^8.17.12",
+    "@react-three/drei": "^9.121.5",
+    "@react-three/fiber": "^8.17.14",
     "@types/three": "^0.172.0",
+    "idb": "^8.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5",
     "three": "^0.172.0",
     "zustand": "^5.0.3"
   },
