--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "my-r3f-app",
+  "homepage": "https://joyceyyzheng.github.io/spatial-diary",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@react-three/drei": "^9.121.5",
-    "@react-three/fiber": "^8.17.14",
+    "@react-three/fiber": "^8.18.0",
+    "@react-three/xr": "^6.6.6",
     "@types/three": "^0.172.0",
     "idb": "^8.0.2",
     "react": "^18.3.1",
@@ -30,6 +35,7 @@
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
